2017-XX-XX   1.3.4:
-------------------
  * add check for Menu/<package>.json filename to correspond to conda
    package name


2017-02-12   1.3.3:
-------------------
  * error on binary placeholders Windows
  * disallow info/package_metadata.json (in pedantic mode)


2017-01-24   1.3.2:
-------------------
  * add check for site-package location for Python packages
  * add check got non-ASCII in info/files, and tar members
  * allow build/binary_has_prefix_files


2016-12-22   1.3.1:
-------------------
  * add checks for duplicate specs
  * allow build/allow_binary_relocation key


2016-12-10   1.3.0:
-------------------
  * add license family check for packages
  * add checks for info/index.json
  * add checks for build and runtime requirements in recipes
  * allow build/skip_compile_pyc


2016-09-29   1.2.1:
-------------------
  * fix description in setup.py
  * allow build/script
  * allow new noarch key


2016-07-17   1.2.0:
-------------------
  * added --pedantic (-p) option to make anaconda-verify more useful for the
    wider community
  * add check for hard links in packages
  * check for commented selectors (--pedantic only)
  * improve name and version checking


2016-07-13   1.1.0:
-------------------
  * add recipe size limit and disallow files with certain extensions
  * add more checking for info/has_prefix in conda packages, in particular
    ensure that the binary placeholder length is 255 bytes on Unix, as
    conda-build 2.0 will start using this value.  We already use conda-build
    master for building packages on repo.continuum.io, and want to enforce
    255 bytes for all new packages, in order to make the transition to
    conda-build easier for the community.
  * add check for header in build.sh
  * add checking for non-ASCII in info/index.json and info/has_prefix


2016-06-30   1.0.0:
-------------------
  * initial release