@@ -32,6 +32,16 @@ def check_version(ver):
     return None
 
 
+hash_pat = re.compile(r'h[0-9a-f]{5,}', re.I)
+def check_build_string(build):
+    build = str(build)
+    if not version_pat.match(build):
+        return "invalid build string '%s'" % build
+    if hash_pat.search(build):
+        return "hashes not allowed in build string '%s'" % build
+    return None
+
+
 ver_spec_pat = re.compile(r'[\w\.,=!<>\*]+$')
 def check_spec(spec):
     if not spec:
