@@ -2,6 +2,7 @@
 -------------------
   * add check for Menu/<package>.json filename to correspond to conda
     package name
+  * add check for build string in pedantic mode
 
 
 2017-02-12   1.3.3:
